Update superbuild button descriptions

--- a/bf_cpp_downloads.html
+++ b/bf_cpp_downloads.html
@@ -349,7 +349,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@SOURCE_CODE@" target="_blank"><img
-                                        src="images/bf_source_code.png"
+                                        src="images/bf_source_code_long.png"
                                         alt="Zipped Bio-Formats Source Code" /></a></td>
                                 <td align="center">@SOURCE_CODE_SIZE@</td>
                                 <td>@SOURCE_CODE_BASE@</td>
@@ -378,14 +378,14 @@
                                 <td><a
                                         href="http://github.com/openmicroscopy/bioformats"
                                         target="_blank"><img
-                                        src="images/github_repository.png"
+                                        src="images/bf_github_repository.png"
                                         alt="Bio-Formats GitHub Repository Link" /></a></td>
                             </tr>
                             <tr>
                                 <td><a
                                         href="http://github.com/ome/ome-cmake-superbuild"
                                         target="_blank"><img
-                                        src="images/github_repository.png"
+                                        src="images/bf_superbuild_github_repository.png"
                                         alt="CMake Super-Build GitHub Repository Link" /></a></td>
                             </tr>
                             <tr>
@@ -396,12 +396,12 @@
                             </tr>
                             <tr>
                                 <td><a href="@TAG_URL@" target="_blank"><img
-                                        src="images/git_tag.png"
+                                        src="images/bf_git_tag.png"
                                         alt="Bio-Formats GitHub Tag" /></a></td>
                             </tr>
                             <tr>
                                 <td><a href="@SUPERBUILD_TAG_URL@" target="_blank"><img
-                                        src="images/git_tag.png"
+                                        src="images/bf_superbuild_git_tag.png"
                                         alt="CMake Super-Build GitHub Tag" /></a></td>
                             </tr>
                         </tbody>
