Remove Java6 OS X OMERO.insight

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -119,24 +119,14 @@
                                         href="@WIN_INSIGHT@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
-                                <td><a href="@MAC_JAVA7+_INSIGHT@"><img
+                                <td><a href="@MAC_INSIGHT@"><img
                                         src="images/omero_mac_java7.png"
-                                        alt="Mac OS X (Java 7+) Insight Download"
-                                     /></a></td>
-                                <td align="center">@MAC_JAVA7+_INSIGHT_SIZE@</td>
-                                <td>@MAC_JAVA7+_INSIGHT_BASE@</td>
-                                <td align="center">@MAC_JAVA7+_INSIGHT_SHA1@ (<a
-                                        href="@MAC_JAVA7+_INSIGHT@.sha1">SHA1</a>)</td>
-                            </tr>
-                            <tr>
-                                <td><a href="@MAC_JAVA6_INSIGHT@"><img
-                                        src="images/omero_mac_java6.png"
                                         alt="Mac OS X Insight Download"
                                      /></a></td>
-                                <td align="center">@MAC_JAVA6_INSIGHT_SIZE@</td>
-                                <td>@MAC_JAVA6_INSIGHT_BASE@</td>
-                                <td align="center">@MAC_JAVA6_INSIGHT_SHA1@ (<a
-                                        href="@MAC_JAVA6_INSIGHT@.sha1">SHA1</a>)</td>
+                                <td align="center">@MAC_INSIGHT_SIZE@</td>
+                                <td>@MAC_INSIGHT_BASE@</td>
+                                <td align="center">@MAC_INSIGHT_SHA1@ (<a
+                                        href="@MAC_INSIGHT@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@LINUX_INSIGHT@"><img
