bfcpp: Restore FreeBSD downloads
Dropped for 5.1.4 due to issues unpacking the source zip; now we're
using tar.xz, there should be no problems for 5.1.5.

--- a/bf_cpp_downloads.html
+++ b/bf_cpp_downloads.html
@@ -144,28 +144,26 @@
                                 <td align="center">@CENTOS66_DEBUG_SHA1@ (<a
                                         href="@CENTOS66_DEBUG@.sha1">SHA1</a>)</td>
                             </tr>
-                            <!-- Broken zip unpack on BSD
                             <tr>
-                                <td><a href="@FREEBSD_RELEASE@"><img
+                                <td><a href="@FREEBSD102_RELEASE@"><img
                                         src="images/bf_c++_freebsd_10_release.png"
-                                        alt="FreeBSD 10.1 C++ Release binaries"
+                                        alt="FreeBSD 10.2 C++ Release binaries"
                                      /></a></td>
-                                <td align="center">@FREEBSD_RELEASE_SIZE@</td>
-                                <td>@FREEBSD_RELEASE_BASE@</td>
-                                <td align="center">@FREEBSD_RELEASE_SHA1@ (<a
-                                        href="@FREEBSD_RELEASE@.sha1">SHA1</a>)</td>
+                                <td align="center">@FREEBSD102_RELEASE_SIZE@</td>
+                                <td>@FREEBSD102_RELEASE_BASE@</td>
+                                <td align="center">@FREEBSD102_RELEASE_SHA1@ (<a
+                                        href="@FREEBSD102_RELEASE@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
-                                <td><a href="@FREEBSD_DEBUG@"><img
+                                <td><a href="@FREEBSD102_DEBUG@"><img
                                         src="images/bf_c++_freebsd_10_debug.png"
-                                        alt="FreeBSD 10.1 C++ Debug binaries"
+                                        alt="FreeBSD 10.2 C++ Debug binaries"
                                      /></a></td>
-                                <td align="center">@FREEBSD_DEBUG_SIZE@</td>
-                                <td>@FREEBSD_DEBUG_BASE@</td>
-                                <td align="center">@FREEBSD_DEBUG_SHA1@ (<a
-                                        href="@FREEBSD_DEBUG@.sha1">SHA1</a>)</td>
+                                <td align="center">@FREEBSD102_DEBUG_SIZE@</td>
+                                <td>@FREEBSD102_DEBUG_BASE@</td>
+                                <td align="center">@FREEBSD102_DEBUG_SHA1@ (<a
+                                        href="@FREEBSD102_DEBUG@.sha1">SHA1</a>)</td>
                             </tr>
-                            -->
                             <tr>
                                 <td><a href="@OSX1010_RELEASE@"><img
                                         src="images/bf_c++_mac_10_10_release.png"
