bfcpp: Add tar.xz source download

--- a/bf_cpp_downloads.html
+++ b/bf_cpp_downloads.html
@@ -342,13 +342,22 @@
                                 <th width="120">Checksum</th>
                             </tr>
                             <tr>
-                                <td><a href="@SOURCE_CODE@" target="_blank"><img
+                                <td><a href="@SOURCE_CODE_TAR@" target="_blank"><img
                                         src="images/bf_source_code_long.png"
                                         alt="Zipped Bio-Formats Source Code" /></a></td>
-                                <td align="center">@SOURCE_CODE_SIZE@</td>
-                                <td>@SOURCE_CODE_BASE@</td>
-                                <td align="center">@SOURCE_CODE_SHA1@ (<a
-                                        href="@SOURCE_CODE@.sha1">SHA1</a>)</td>
+                                <td align="center">@SOURCE_CODE_TAR_SIZE@</td>
+                                <td>@SOURCE_CODE_TAR_BASE@</td>
+                                <td align="center">@SOURCE_CODE_TAR_SHA1@ (<a
+                                        href="@SOURCE_CODE_TAR@.sha1">SHA1</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a href="@SOURCE_CODE_ZIP@" target="_blank"><img
+                                        src="images/bf_source_code_long.png"
+                                        alt="Zipped Bio-Formats Source Code" /></a></td>
+                                <td align="center">@SOURCE_CODE_ZIP_SIZE@</td>
+                                <td>@SOURCE_CODE_ZIP_BASE@</td>
+                                <td align="center">@SOURCE_CODE_ZIP_SHA1@ (<a
+                                        href="@SOURCE_CODE_ZIP@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@SUPERBUILD_SOURCE_CODE@" target="_blank"><img
