Add Bio-Formats tar.xz source release

--- a/bf_cpp_downloads.html
+++ b/bf_cpp_downloads.html
@@ -342,13 +342,13 @@
                                 <th width="120">Checksum</th>
                             </tr>
                             <tr>
-                                <td><a href="@SOURCE_CODE_TAR@" target="_blank"><img
+                                <td><a href="@SOURCE_CODE_TXZ@" target="_blank"><img
                                         src="images/bf_source_code_long_tar.png"
                                         alt="Zipped Bio-Formats Source Code" /></a></td>
-                                <td align="center">@SOURCE_CODE_TAR_SIZE@</td>
-                                <td>@SOURCE_CODE_TAR_BASE@</td>
-                                <td align="center">@SOURCE_CODE_TAR_SHA1@ (<a
-                                        href="@SOURCE_CODE_TAR@.sha1">SHA1</a>)</td>
+                                <td align="center">@SOURCE_CODE_TXZ_SIZE@</td>
+                                <td>@SOURCE_CODE_TXZ_BASE@</td>
+                                <td align="center">@SOURCE_CODE_TXZ_SHA1@ (<a
+                                        href="@SOURCE_CODE_TXZ@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@SOURCE_CODE_ZIP@" target="_blank"><img
