--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -340,13 +340,22 @@
                                 <th width="120">Checksum</th>
                             </tr>
                             <tr>
-                                <td><a href="@SOURCE_CODE@" target="_blank"><img
+                                <td><a href="@SOURCE_CODE_TXZ@" target="_blank"><img
+                                        src="images/bf_source_code_tar.png"
+                                        alt="XZ-Compressed Tape Archive Source Code" /></a></td>
+                                <td align="center">@SOURCE_CODE_TXZ_SIZE@</td>
+                                <td>@SOURCE_CODE_TXZ_BASE@</td>
+                                <td align="center">@SOURCE_CODE_TXZ_SHA1@ (<a
+                                        href="@SOURCE_CODE_TXZ@.sha1">SHA1</a>)</td>
+                            </tr>
+                             <tr>
+                                <td><a href="@SOURCE_CODE_ZIP@" target="_blank"><img
                                         src="images/bf_source_code.png"
                                         alt="Zipped Source Code" /></a></td>
-                                <td align="center">@SOURCE_CODE_SIZE@</td>
-                                <td>@SOURCE_CODE_BASE@</td>
-                                <td align="center">@SOURCE_CODE_SHA1@ (<a
-                                        href="@SOURCE_CODE@.sha1">SHA1</a>)</td>
+                                <td align="center">@SOURCE_CODE_ZIP_SIZE@</td>
+                                <td>@SOURCE_CODE_ZIP_BASE@</td>
+                                <td align="center">@SOURCE_CODE_ZIP_SHA1@ (<a
+                                        href="@SOURCE_CODE_ZIP@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
