make table headers all singular on downloads pages

--- a/bf_cpp_downloads.html
+++ b/bf_cpp_downloads.html
@@ -119,7 +119,7 @@
                     <table width="800" border="0" cellpadding="5" summary="Self-contained versions">
                         <tbody>
                             <tr>
-                                <th width="269">Downloads</th>
+                                <th width="269">Binary File</th>
                                 <th width="85">Size</th>
                                 <th width="150">File Name</th>
                                 <th width="125">SHA1 Checksum</th>
@@ -272,7 +272,7 @@
                     <table width="800" border="0" cellpadding="5" summary="Platform versions">
                         <tbody>
                             <tr>
-                                <th width="269">Downloads</th>
+                                <th width="269">Binary File</th>
                                 <th width="85">Size</th>
                                 <th width="150">File Name</th>
                                 <th width="125">SHA1 Checksum</th>
@@ -375,7 +375,7 @@
                     <table width="278" border="0" cellpadding="5" summary="Bio-Formats Code links">
                         <tbody>
                             <tr>
-                                <th width="264">Source Code Links</th>
+                                <th width="264">Source Code Link</th>
                             </tr>
                             <tr>
                                 <td><a
