--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -87,7 +87,7 @@
 						   summary="Bio-Formats tools downloads">
                         <tbody>
                             <tr>
-                                <th width="269">Clients</th>
+                                <th width="269">Client</th>
                                 <th width="85">Size</th>
                                 <th width="150">File Name</th>
                                 <th width="125">Checksum</th>
@@ -197,7 +197,7 @@
                                 <th width="150">Latest build</th>
                             </tr>
                             <tr>
-                                <th colspan="3">Packages</th>
+                                <th colspan="3">Package</th>
                             </tr>
                             <tr>
                                 <td>Bio-Formats package</td>
@@ -287,7 +287,7 @@
                                         >bio-formats-testing-framework.jar</a></td>
                             </tr>
                             <tr>
-                                <th align="center" colspan="3">Forks</th>
+                                <th align="center" colspan="3">Fork</th>
                             </tr>
                             <tr>
                                 <td>JAI Image I/O Tools</td>
@@ -317,7 +317,7 @@
                                         >turbojpeg.jar</a></td>
                             </tr>
                             <tr>
-                                <th align="center" colspan="3">Stubs</th>
+                                <th align="center" colspan="3">Stub</th>
                             </tr>
                             <tr>
                                 <td>Luratech LuraWave stubs</td>
@@ -355,7 +355,7 @@
                     <table width="278" border="0" cellpadding="5" summary="Bio-Formats Code links">
                         <tbody>
                             <tr>
-                                <th width="264">Source Code Links</th>
+                                <th width="264">Source Code Link</th>
                             </tr>
                             <tr>
                                 <td><a
