--- a/flimfit_downloads.html
+++ b/flimfit_downloads.html
@@ -115,7 +115,7 @@
                     <table width="800" border="0" cellpadding="5" summary="FLIMfit for OMERO 5.0.x Downloads">
                         <tbody>
                             <tr>
-                                <th width="269">Clients</th>
+                                <th width="269">Client</th>
                                 <th width="85">Size</th>
                                 <th width="271">File Name</th>
                                 <th width="125">Checksum</th>
@@ -173,7 +173,7 @@
                     <table width="278" border="0" cellpadding="5" summary="FLIMfit Source Code">
                         <tbody>
                             <tr>
-                                <th width="264">Source Code Links</th>
+                                <th width="264">Source Code Link</th>
                             </tr>
                             <tr>
                                 <td><a
