--- a/ice_downloads.html
+++ b/ice_downloads.html
@@ -63,7 +63,7 @@
                     <table width="800" border="0" cellpadding="5" summary="Ice Downloads for Windows">
                         <tbody>
                             <tr>
-                                <th width="580">Downloads</th>
+                                <th width="580">Binary File</th>
                                 <th width="85">Size</th>
                                 <th width="125">Checksum</th>
                             </tr>
@@ -91,7 +91,7 @@
 	                    <table width="800" border="0" cellpadding="5" summary="OMERO Code">
 	                        <tbody>
 	                            <tr>
-	                                <th width="580">Downloads</th>
+	                                <th width="580">Source Code</th>
 	                                <th width="85">Size</th>
 	                                <th width="125">Checksum</th>
 	                            </tr>
