--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -92,7 +92,7 @@
                     <table width="800" border="0" cellpadding="5" summary="OMERO.mtools downloads">
                         <tbody>
                             <tr>
-                                <th width="269">Clients</th>
+                                <th width="269">Client</th>
                                 <th width="85">Size</th>
                                 <th width="271">File Name</th>
                                 <th width="125">Checksum</th>
