--- a/omerova_downloads.html
+++ b/omerova_downloads.html
@@ -108,7 +108,7 @@
                     <table width="278" border="0" cellpadding="5" summary="OMERO Code Links">
                         <tbody>
                             <tr>
-                                <th width="264">Source Code Links</th>
+                                <th width="264">Source Code Link</th>
                             </tr>
                             <tr>
                                 <td><a
