remove Java version from Mac client download icon

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -120,7 +120,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@MAC_INSIGHT@"><img
-                                        src="images/omero_mac_java7.png"
+                                        src="images/omero_mac.png"
                                         alt="Mac OS X Insight Download"
                                      /></a></td>
                                 <td align="center">@MAC_INSIGHT_SIZE@</td>
