Updating Figure downloads page

--- a/figure_downloads.html
+++ b/figure_downloads.html
@@ -63,14 +63,14 @@
 
                     <li>
                         <p>Full documentation is available as <a
-                                href="http://will-moore.github.io/figure/">web
+                                href="http://figure.openmicroscopy.org">web
                                 documentation</a>.</p>
                     </li>
 
                     <li>
                         <p>Source code and the latest development version can be
                             found on <a
-                                href="https://github.com/will-moore/figure"
+                                href="https://github.com/ome/figure"
                                 >GitHub</a>.</p>
                     </li>
                 </ul>
@@ -104,10 +104,10 @@
         <div class="visualClear" id="clear-space-before-footer"><!-- --></div>
         <div id="portal-footer">
             <p>
-                <acronym title="Copyright">&copy;</acronym> 2000-2014 University
+                <acronym title="Copyright">&copy;</acronym> 2000-2015 University
                 of Dundee &amp; Open Microscopy Environment. <a
                     href="http://www.openmicroscopy.org/site/about/licensing-attribution/licensing"
-                    >Creative Commons Attribution 3.0 Unported License</a>
+                    >Creative Commons Attribution 4.0 International License</a>
             </p>
             <p> OME source code is available under the <a
                     href="http://www.openmicroscopy.org/site/about/licensing"
