--- a/bf_cpp_downloads.html
+++ b/bf_cpp_downloads.html
@@ -125,6 +125,26 @@
                                 <th width="125">SHA1 Checksum</th>
                             </tr>
                             <tr>
+                                <td><a href="@CENTOS71_RELEASE@"><img
+                                        src="images/bf_c++_centos_7_release.png"
+                                        alt="CentOS 7.1 C++ Release binaries"
+                                     /></a></td>
+                                <td align="center">@CENTOS71_RELEASE_SIZE@</td>
+                                <td>@CENTOS71_RELEASE_BASE@</td>
+                                <td align="center">@CENTOS71_RELEASE_SHA1@ (<a
+                                        href="@CENTOS71_RELEASE@.sha1">SHA1</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a href="@CENTOS71_DEBUG@"><img
+                                        src="images/bf_c++_centos_7_debug.png"
+                                        alt="CentOS 7.1 C++ Debug binaries"
+                                     /></a></td>
+                                <td align="center">@CENTOS71_DEBUG_SIZE@</td>
+                                <td>@CENTOS71_DEBUG_BASE@</td>
+                                <td align="center">@CENTOS71_DEBUG_SHA1@ (<a
+                                        href="@CENTOS71_DEBUG@.sha1">SHA1</a>)</td>
+                            </tr>
+                            <tr>
                                 <td><a href="@CENTOS66_RELEASE@"><img
                                         src="images/bf_c++_centos_6_release.png"
                                         alt="CentOS 6.6 C++ Release binaries"
@@ -144,28 +164,46 @@
                                 <td align="center">@CENTOS66_DEBUG_SHA1@ (<a
                                         href="@CENTOS66_DEBUG@.sha1">SHA1</a>)</td>
                             </tr>
-                            <!-- Broken zip unpack on BSD
                             <tr>
-                                <td><a href="@FREEBSD_RELEASE@"><img
+                                <td><a href="@FREEBSD102_RELEASE@"><img
                                         src="images/bf_c++_freebsd_10_release.png"
-                                        alt="FreeBSD 10.1 C++ Release binaries"
+                                        alt="FreeBSD 10.2 C++ Release binaries"
                                      /></a></td>
-                                <td align="center">@FREEBSD_RELEASE_SIZE@</td>
-                                <td>@FREEBSD_RELEASE_BASE@</td>
-                                <td align="center">@FREEBSD_RELEASE_SHA1@ (<a
-                                        href="@FREEBSD_RELEASE@.sha1">SHA1</a>)</td>
+                                <td align="center">@FREEBSD102_RELEASE_SIZE@</td>
+                                <td>@FREEBSD102_RELEASE_BASE@</td>
+                                <td align="center">@FREEBSD102_RELEASE_SHA1@ (<a
+                                        href="@FREEBSD102_RELEASE@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
-                                <td><a href="@FREEBSD_DEBUG@"><img
+                                <td><a href="@FREEBSD102_DEBUG@"><img
                                         src="images/bf_c++_freebsd_10_debug.png"
-                                        alt="FreeBSD 10.1 C++ Debug binaries"
+                                        alt="FreeBSD 10.2 C++ Debug binaries"
                                      /></a></td>
-                                <td align="center">@FREEBSD_DEBUG_SIZE@</td>
-                                <td>@FREEBSD_DEBUG_BASE@</td>
-                                <td align="center">@FREEBSD_DEBUG_SHA1@ (<a
-                                        href="@FREEBSD_DEBUG@.sha1">SHA1</a>)</td>
+                                <td align="center">@FREEBSD102_DEBUG_SIZE@</td>
+                                <td>@FREEBSD102_DEBUG_BASE@</td>
+                                <td align="center">@FREEBSD102_DEBUG_SHA1@ (<a
+                                        href="@FREEBSD102_DEBUG@.sha1">SHA1</a>)</td>
                             </tr>
-                            -->
+                            <tr>
+                                <td><a href="@OSX1011_RELEASE@"><img
+                                        src="images/bf_c++_mac_10_11_release.png"
+                                        alt="MacOS X 10.11 C++ Release binaries"
+                                     /></a></td>
+                                <td align="center">@OSX1011_RELEASE_SIZE@</td>
+                                <td>@OSX1011_RELEASE_BASE@</td>
+                                <td align="center">@OSX1011_RELEASE_SHA1@ (<a
+                                        href="@OSX1011_RELEASE@.sha1">SHA1</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a href="@OSX1011_DEBUG@"><img
+                                        src="images/bf_c++_mac_10_11_debug.png"
+                                        alt="MacOS X 10.11 C++ Debug binaries"
+                                     /></a></td>
+                                <td align="center">@OSX1011_DEBUG_SIZE@</td>
+                                <td>@OSX1011_DEBUG_BASE@</td>
+                                <td align="center">@OSX1011_DEBUG_SHA1@ (<a
+                                        href="@OSX1011_DEBUG@.sha1">SHA1</a>)</td>
+                            </tr>
                             <tr>
                                 <td><a href="@OSX1010_RELEASE@"><img
                                         src="images/bf_c++_mac_10_10_release.png"
