Update mtools downloads icons & text

--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -66,9 +66,9 @@
                                 href="https://www.openmicroscopy.org/site/products/partner/omero.mtools"
                                 >Product page</a> for information.</p></li>
                     <li><p>Please note that this version of OMERO.mtools is
-                        compatible with OMERO 5.1 servers. If you require
-                        compatibility with an OMERO 5.0 server, earlier
-                        versions are available from the main <a
+                        compatible with OMERO 5.2 servers. If you require
+                        compatibility with an OMERO 5.1 server or earlier,
+                        previous versions are available from the main <a
                                 href="http://downloads.openmicroscopy.org/mtools/?C=M;O=D"
                                 >downloads folder</a>. </p></li>
                     <li><p>Choose the version of OMERO.mtools for your platform
@@ -146,9 +146,9 @@
                 <ul>
                     <li>
                         <p>We recommend that you always use the most recent
-                            release version of OMERO.mtools, but if you need to
-                            use a previous version, they are all available from
-                            the main <a
+                            release version of OMERO.mtools, but if you need
+                            to use a previous version, they are all available
+                            from the main <a
                                 href="http://downloads.openmicroscopy.org/mtools/?C=M;O=D"
                                 >downloads folder</a></p>
                     </li>
@@ -159,10 +159,10 @@
                 ><!-- --></div>
             <div id="portal-footer">
                 <p>
-                    <acronym title="Copyright">&copy;</acronym> 2000-2014
+                    <acronym title="Copyright">&copy;</acronym> 2000-2015
                     University of Dundee &amp; Open Microscopy Environment. <a
                         href="http://www.openmicroscopy.org/site/about/licensing-attribution/licensing"
-                        >Creative Commons Attribution 3.0 Unported License</a>
+                        >Creative Commons Attribution 4.0 International License</a>
                 </p>
                 <p> OME source code is available under the <a
                         href="http://www.openmicroscopy.org/site/about/licensing"
