--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -71,17 +71,18 @@
                         previous versions are available from the main <a
                                 href="http://downloads.openmicroscopy.org/mtools/?C=M;O=D"
                                 >downloads folder</a>. </p></li>
-                    <li><p>Choose the version of OMERO.mtools for your platform
-                            (Windows/Mac) below.</p></li>
-                    <li><p>Ensure you have the correct MCR (MATLAB Compiler
-                            Runtime) installed on your system (currently 2013b,
-                            v8.2). If you do not, or are in any doubt, please
-                            also download the MCR for your platform
-                        below.</p></li>
-                    <li><p>The MCR must be installed before running
-                            OMERO.mtools.</p></li>
-                    <li><p>Once downloaded simply unzip and run. Running from a
-                            network drive is not recommended.</p></li>
+                    <li><p>Choose the version of OMERO.mtools for your
+                        platform (Windows/Mac) below.</p></li>
+                    <li><p>OMERO.mtools for Mac comes with the correct version
+                        of MCR (MATLAB Compiler Runtime) bundled (currently
+                        2013b, v8.2).</p></li>
+                    <li><p>The Windows mtools installer will fetch the MCR
+                        from Mathworks and install it for you if you do not
+                        already have it, but it may be more
+                        efficient to install it manually from the table below
+                        before installing OMERO.mtools.</li></p>
+                    <li><p>Once downloaded simply unzip and run. Running from
+                        a network drive is not recommended.</p></li>
                     <li><p>Source code is available on <a
                                 href="https://github.com/mporter-gre/mtools"
                                 >GitHub</a>.</p>
@@ -120,9 +121,9 @@
                         </tbody>
                     </table>
                 </div>
-                <h2><a name="mcr" id="mcr"></a>MCR downloads</h2>
+                <h2><a name="mcr" id="mcr"></a>MCR download</h2>
                 <div class="alt-table">
-                    <table width="269" border="0" cellpadding="5" summary="MCR downloads">
+                    <table width="269" border="0" cellpadding="5" summary="MCR download">
                         <tbody>
                             <tr>
                                 <th width="269">MCR</th>
@@ -132,12 +133,6 @@
                                         href="http://www.mathworks.com/supportfiles/downloads/R2013b/deployment_files/R2013b/installers/win64/MCR_R2013b_win64_installer.exe"
                                         ><img src="images/mcr_windows.png"
                                         alt="Windows MCR Download" /></a></td>
-                            </tr>
-                            <tr>
-                                <td><a
-                                        href="http://www.mathworks.com/supportfiles/downloads/R2013b/deployment_files/R2013b/installers/maci64/MCR_R2013b_maci64_installer.zip"
-                                        ><img src="images/mcr_mac.png"
-                                        alt="Mac MCR Download" /></a></td>
                             </tr>
                         </tbody>
                     </table>
