Fixing html tags

--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -80,7 +80,7 @@
                         from Mathworks and install it for you if you do not
                         already have it, but it may be more
                         efficient to install it manually from the table below
-                        before installing OMERO.mtools.</li></p>
+                        before installing OMERO.mtools.</p></li>
                     <li><p>Once downloaded simply unzip and run. Running from
                         a network drive is not recommended.</p></li>
                     <li><p>Source code is available on <a
