Improving description wording

--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -61,8 +61,9 @@
                 <ul>
                     <li>
                         <p>OMERO.mtools is a suite of tools written in MATLAB
-                            for various analyses of images stored in an OMERO
-                            server. Please see the <a
+                            for performing common microscopy workflows and
+                            analyses on images stored in an OMERO server.
+                            Please see the <a
                                 href="https://www.openmicroscopy.org/site/products/partner/omero.mtools"
                                 >Product page</a> for information.</p></li>
                     <li><p>Please note that this version of OMERO.mtools is
