--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -61,9 +61,8 @@
                 <ul>
                     <li>
                         <p>OMERO.mtools is a suite of tools written in MATLAB
-                            for performing common microscopy workflows and
-                            analyses on images stored in an OMERO server.
-                            Please see the <a
+                            for performing common analysis tasks on images
+                            stored in an OMERO server. Please see the <a
                                 href="https://www.openmicroscopy.org/site/products/partner/omero.mtools"
                                 >Product page</a> for information.</p></li>
                     <li><p>Please note that this version of OMERO.mtools is
