Adding Octave package to BF downloads page

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -123,6 +123,15 @@
                                 <td align="center">@MATLAB_TOOLS_SHA1@ (<a
                                         href="@MATLAB_TOOLS@.sha1">SHA1</a>)</td>
                             </tr>
+                            <tr>
+                                <td><a href="@OCTAVE_PACKAGE@"><img
+                                        src="images/bf_octave_package.png"
+                                        alt="Octave Package" /></a></td>
+                                <td align="center">@OCTAVE_PACKAGE_SIZE@</td>
+                                <td>@OCTAVE_PACKAGE_BASE@</td>
+                                <td align="center">OCTAVE_PACKAGE_SHA1@ (<a
+                                        href="@OCTAVE_PACKAGE@.sha1">SHA1</a>)</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -151,6 +160,13 @@
                                 bioformats_package.jar included so you do not
                                 have to install both separately</b>. See the <a
                                 href="@DOC_URL@/users/matlab/index.html">MATLAB
+                                documentation</a> for further information.</p>
+                    </li>
+                    <li>
+                        <p>@OCTAVE_PACKAGE_BASE@ is a bundle of functions for
+                            using Bio-Formats from Octave. You also need to
+                            install bioformats_package.jar separately. See the <a
+                                href="@DOC_URL@/users/octave/index.html">Octave
                                 documentation</a> for further information.</p>
                     </li>
                 </ul>
