Remove VM from OMERO page & add last version note

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -92,9 +92,7 @@
                         <p>If you do not have an institutional server, you can
                             apply for an <a
                                 href="http://qa.openmicroscopy.org.uk/registry/demo_account/"
-                                >account on our Demo server</a> or download the
-                                <a href="/latest/omero-virtual-appliance">Virtual Appliance</a> to install
-                            your own version locally.</p>
+                                >account on our Demo server</a>.</p>
                     </li>
                 </ul>
                 <h2><a name="clients" id="clients"></a>OMERO client
