--- a/omerova_downloads.html
+++ b/omerova_downloads.html
@@ -63,7 +63,12 @@
                     <li>
                         <p>Information on this release of OMERO is in the <a
                                 href="@ANNOUNCEMENT_URL@">release
-                                announcement</a></p>
+                                announcement</a>.</p>
+                    </li>
+                    <li>
+                        <p><strong>Note that this is the final release of the
+                            OMERO Virtual Appliance as this tool has been
+                            discontinued as of OMERO 5.2.2.</strong></p>
                     </li>
                 </ul>
                 <h2><a name="va" id="va"></a>OMERO Virtual Appliance
