--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -92,7 +92,7 @@
                         <p>If you do not have an institutional server, you can
                             apply for an <a
                                 href="http://qa.openmicroscopy.org.uk/registry/demo_account/"
-                                >account on our Demo server</a>.</p>
+                                >account on our Demo server</a></p>
                     </li>
                 </ul>
                 <h2><a name="clients" id="clients"></a>OMERO client
@@ -143,7 +143,7 @@
                     <li>
                         <p> OMERO.web is part of the server package, so
                             individual users do not need to install it
-                            locally.</p>
+                            locally</p>
                     </li>
                     <li>
                         <p>Full instructions for installing the client are on
