--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -129,7 +129,7 @@
                                         alt="Octave Package" /></a></td>
                                 <td align="center">@OCTAVE_PACKAGE_SIZE@</td>
                                 <td>@OCTAVE_PACKAGE_BASE@</td>
-                                <td align="center">OCTAVE_PACKAGE_SHA1@ (<a
+                                <td align="center">@OCTAVE_PACKAGE_SHA1@ (<a
                                         href="@OCTAVE_PACKAGE@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
