bfcpp: Merge latest 5.1 changes

--- a/bf_cpp_downloads.html
+++ b/bf_cpp_downloads.html
@@ -119,10 +119,30 @@
                     <table width="800" border="0" cellpadding="5" summary="Self-contained versions">
                         <tbody>
                             <tr>
-                                <th width="269">Binary File</th>
+                                <th width="269">Downloads</th>
                                 <th width="85">Size</th>
                                 <th width="150">File Name</th>
                                 <th width="125">SHA1 Checksum</th>
+                            </tr>
+                            <tr>
+                                <td><a href="@CENTOS71_RELEASE@"><img
+                                        src="images/bf_c++_centos_7_release.png"
+                                        alt="CentOS 7.1 C++ Release binaries"
+                                     /></a></td>
+                                <td align="center">@CENTOS71_RELEASE_SIZE@</td>
+                                <td>@CENTOS71_RELEASE_BASE@</td>
+                                <td align="center">@CENTOS71_RELEASE_SHA1@ (<a
+                                        href="@CENTOS71_RELEASE@.sha1">SHA1</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a href="@CENTOS71_DEBUG@"><img
+                                        src="images/bf_c++_centos_7_debug.png"
+                                        alt="CentOS 7.1 C++ Debug binaries"
+                                     /></a></td>
+                                <td align="center">@CENTOS71_DEBUG_SIZE@</td>
+                                <td>@CENTOS71_DEBUG_BASE@</td>
+                                <td align="center">@CENTOS71_DEBUG_SHA1@ (<a
+                                        href="@CENTOS71_DEBUG@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@CENTOS66_RELEASE@"><img
@@ -163,6 +183,26 @@
                                 <td>@FREEBSD102_DEBUG_BASE@</td>
                                 <td align="center">@FREEBSD102_DEBUG_SHA1@ (<a
                                         href="@FREEBSD102_DEBUG@.sha1">SHA1</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a href="@OSX1011_RELEASE@"><img
+                                        src="images/bf_c++_mac_10_11_release.png"
+                                        alt="MacOS X 10.11 C++ Release binaries"
+                                     /></a></td>
+                                <td align="center">@OSX1011_RELEASE_SIZE@</td>
+                                <td>@OSX1011_RELEASE_BASE@</td>
+                                <td align="center">@OSX1011_RELEASE_SHA1@ (<a
+                                        href="@OSX1011_RELEASE@.sha1">SHA1</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a href="@OSX1011_DEBUG@"><img
+                                        src="images/bf_c++_mac_10_11_debug.png"
+                                        alt="MacOS X 10.11 C++ Debug binaries"
+                                     /></a></td>
+                                <td align="center">@OSX1011_DEBUG_SIZE@</td>
+                                <td>@OSX1011_DEBUG_BASE@</td>
+                                <td align="center">@OSX1011_DEBUG_SHA1@ (<a
+                                        href="@OSX1011_DEBUG@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@OSX1010_RELEASE@"><img
@@ -272,7 +312,7 @@
                     <table width="800" border="0" cellpadding="5" summary="Platform versions">
                         <tbody>
                             <tr>
-                                <th width="269">Binary File</th>
+                                <th width="269">Downloads</th>
                                 <th width="85">Size</th>
                                 <th width="150">File Name</th>
                                 <th width="125">SHA1 Checksum</th>
@@ -342,22 +382,13 @@
                                 <th width="120">Checksum</th>
                             </tr>
                             <tr>
-                                <td><a href="@SOURCE_CODE_TXZ@" target="_blank"><img
+                                <td><a href="@SOURCE_CODE@" target="_blank"><img
                                         src="images/bf_source_code_long_tar.png"
                                         alt="Zipped Bio-Formats Source Code" /></a></td>
-                                <td align="center">@SOURCE_CODE_TXZ_SIZE@</td>
-                                <td>@SOURCE_CODE_TXZ_BASE@</td>
-                                <td align="center">@SOURCE_CODE_TXZ_SHA1@ (<a
-                                        href="@SOURCE_CODE_TXZ@.sha1">SHA1</a>)</td>
-                            </tr>
-                            <tr>
-                                <td><a href="@SOURCE_CODE_ZIP@" target="_blank"><img
-                                        src="images/bf_source_code_long.png"
-                                        alt="Zipped Bio-Formats Source Code" /></a></td>
-                                <td align="center">@SOURCE_CODE_ZIP_SIZE@</td>
-                                <td>@SOURCE_CODE_ZIP_BASE@</td>
-                                <td align="center">@SOURCE_CODE_ZIP_SHA1@ (<a
-                                        href="@SOURCE_CODE_ZIP@.sha1">SHA1</a>)</td>
+                                <td align="center">@SOURCE_CODE_SIZE@</td>
+                                <td>@SOURCE_CODE_BASE@</td>
+                                <td align="center">@SOURCE_CODE_SHA1@ (<a
+                                        href="@SOURCE_CODE@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@SUPERBUILD_SOURCE_CODE@" target="_blank"><img
@@ -375,7 +406,7 @@
                     <table width="278" border="0" cellpadding="5" summary="Bio-Formats Code links">
                         <tbody>
                             <tr>
-                                <th width="264">Source Code Link</th>
+                                <th width="264">Source Code Links</th>
                             </tr>
                             <tr>
                                 <td><a
