--- a/files_cpp_downloads.html
+++ b/files_cpp_downloads.html
@@ -396,8 +396,8 @@
                                 <td align="center"><a href="@QTWIDGETS_SOURCE_ZIP@.sha1">@QTWIDGETS_SOURCE_ZIP_SHA1@</a></td>
                             </tr>
                             <tr>
-                                <td rowspan="2"><img src="images/square_c++.png"
-                                                     alt="C++ source"/></td>
+                                <td rowspan="2"><img src="images/square_cmake.png"
+                                                     alt="CMake source"/></td>
                                 <td rowspan="2">OME&nbsp;Super-Build</td>
                                 <td rowspan="2"><a href="http://github.com/ome/ome-cmake-superbuild"><img src="images/square_github.png" alt="zip"/></a></td>
                                 <td rowspan="2"><a href="@SUPERBUILD_TAG_URL@">v@SUPERBUILD_VERSION@</a></td>
