Test auto-year for BF page

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -426,7 +426,7 @@
                 ><!-- --></div>
             <div id="portal-footer">
                 <p>
-                    <acronym title="Copyright">&copy;</acronym> 2000-2016
+                    <acronym title="Copyright">&copy;</acronym> 2000-@YEAR@
                     University of Dundee &amp; Open Microscopy Environment. <a
                         href="http://www.openmicroscopy.org/site/about/licensing-attribution/licensing"
                         >Creative Commons Attribution 3.0 Unported License</a>
