--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -154,7 +154,7 @@
                 ><!-- --></div>
             <div id="portal-footer">
                 <p>
-                    <acronym title="Copyright">&copy;</acronym> 2000-2016
+                    <acronym title="Copyright">&copy;</acronym> 2000-@YEAR@
                     University of Dundee &amp; Open Microscopy Environment. <a
                         href="http://www.openmicroscopy.org/site/about/licensing-attribution/licensing"
                         >Creative Commons Attribution 4.0 International License</a>
