Add webtagging compatibility note

--- a/webtagging_downloads.html
+++ b/webtagging_downloads.html
@@ -56,6 +56,11 @@
                 <h2>OMERO.webtagging @VERSION@</h2>
                 <ul>
                     <li>
+                        <p>This release is not compatible with OMERO versions
+                        prior to 5.2.0. Please use OMERO.webtagging version
+                        1.3.0 if you are still using OMERO 5.1.x.</p>
+                    </li>
+                    <li>
                         <p>Full documentation is available as <a
                                 href="http://www.openmicroscopy.org/site/support/partner/omero.webtagging"
                                 >web documentation</a>.</p>
